# django-auth

./: README.md  pyproject.toml
auth/: db.sqlite3  manage.py  schema.yml
auth/main_app/: asgi.py  settings.py  urls.py  wsgi.py
auth/users/: models.py  serializers.py  tests.py  urls.py  views.py
auth/users/migrations/: 0001_initial.py
